# AI-assisted-LLM-apps

./: .env.example  README.md  pyproject.toml  session2_planning_document.md
app/: config.py  main.py
app/api/: cases.py
app/db/: queries.py  schema.sql
app/evaluation/: engine.py  router.py  schemas.py
app/schemas/: __init__.py  api_models.py  medical_case.py
app/services/: llm_service.py
docs/: architecture.md
frontend/: api_client.py  evaluation_dashboard.py  interview_app.py  streamlit_app.py
tests/: conftest.py  test_api.py  test_schemas.py
