[project]
name = "ai-assisted-llm-apps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.129.0",
    "openai>=2.21.0",
    "pydantic>=2.12.5",
    "redis>=7.2.0",
    "streamlit>=1.54.0",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]
